Revisando nome dos projetos

--- a/GagoAspireApp.FrontEndHost/Components/Pages/Enqueue.razor
+++ b/GagoAspireApp.FrontEndHost/Components/Pages/Enqueue.razor
@@ -3,7 +3,7 @@
 @rendermode InteractiveServer
 @* @attribute [OutputCache(Duration = 5)] *@
 
-@inject WeatherApiClient api
+@inject BackendApiClient api
 
 <PageTitle>enqueue</PageTitle>
 
