--- a/GagoAspireApp.FrontEndHost/Components/Pages/Weather.razor
+++ b/GagoAspireApp.FrontEndHost/Components/Pages/Weather.razor
@@ -2,7 +2,7 @@
 @attribute [StreamRendering(true)]
 @attribute [OutputCache(Duration = 5)]
 
-@inject WeatherApiClient WeatherApi
+@inject BackendApiClient WeatherApi
 
 <PageTitle>Weather</PageTitle>
 
