--- a/GagoAspireApp.FrontEndHost/Components/_Imports.razor
+++ b/GagoAspireApp.FrontEndHost/Components/_Imports.razor
@@ -7,5 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.OutputCaching
 @using Microsoft.JSInterop
-@using GagoAspireApp.Web
-@using GagoAspireApp.Web.Components
+@using GagoAspireApp.FrontEndHost
+@using GagoAspireApp.FrontEndHost.Components
