Updated project type, refactored classes, added new classes and methods, removed class, and updated files
Updated the project type and location for `DotNetAspireApp.Common`. Refactored `RabbitMQEventSourceLogForwarder` and `RabbitMQEventSourceListener` classes to use `this` keyword. Added `EmailService` and `Constants` classes and updated `Program.cs` to use them. Removed `BusinessService1` class. Updated `MessagePublisher`, `ConsumerBaseParameters`, `appsettings.json`, `Enqueue.razor`, `App.razor`, `DotNetAspireApp.Web.csproj`, `DotNetAspireApp.Worker.csproj`, `DoSomethingCommand.cs`, and `BackendApiClient.cs` files. Added `Polly` and `Polly.Retry` namespaces to `Extensions.DependencyInjection.cs` file and replaced `WithConnectionFactoryFunc` with `WithConnection` in `DependencyInjectionExtensions` class. Added `WaitRabbitMQAsync` method to `DependencyInjectionExtensions` class and `Parallelism` method to `ConnectionFactory` class in `Extensions.RabbitMQ.cs` file.

--- a/samples/Aspire/DotNetAspireApp.Web/Components/App.razor
+++ b/samples/Aspire/DotNetAspireApp.Web/Components/App.razor
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="DotNetAspireApp.Web.styles.css" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
     <link rel="icon" type="image/png" href="favicon.png" />
     <HeadOutlet />
 </head>
@@ -15,6 +16,7 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 </body>
 
 </html>
