`Update UI component and remove method in RabbitMQ extension`
 Updated the RadzenSlider component in Enqueue.razor, moving it from a div element to a p element and changing its width to 100%. Removed the DispatchConsumersAsync method from the ConnectionFactory class in Extensions.RabbitMQ.cs, which was used to set the DispatchConsumersAsync property of the ConnectionFactory instance.

--- a/samples/Aspire/DotNetAspireApp.Web/Components/Pages/Enqueue.razor
+++ b/samples/Aspire/DotNetAspireApp.Web/Components/Pages/Enqueue.razor
@@ -12,9 +12,9 @@
 
 <p>This component demonstrates showing data loaded from a backend API service.</p>
 
-<div class="rz-p-12 rz-text-align-center">
-    <RadzenSlider @bind-Value=@TotalItemsToSend TValue="int" Min="1" Max="10000" />
-</div>
+<p>
+    <RadzenSlider @bind-Value=@TotalItemsToSend TValue="int" Min="1" Max="10000" Style="width:100%" />
+</p>
 
 <p>
     <label>
